Handle wildcard parameter in Namespace list API (#418)